exports[`Rangeslider specs should render basic slider with defaults 1`] = `
<div
  aria-orientation="horizontal"
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="rangeslider rangeslider-horizontal"
  onMouseDown={[Function anonymous]}
  onMouseUp={[Function anonymous]}
  onTouchEnd={[Function anonymous]}
  onTouchStart={[Function anonymous]}>
  <div
    className="rangeslider__fill"
    style={
      Object {
        "left": "0px",
        "width": "0px"
      }
    } />
  <div
    className="rangeslider__handle"
    onKeyDown={[Function anonymous]}
    onKeyUp={[Function anonymous]}
    onMouseDown={[Function anonymous]}
    onMouseUp={[Function anonymous]}
    onTouchEnd={[Function anonymous]}
    onTouchMove={[Function anonymous]}
    role="button"
    style={
      Object {
        "left": "0px",
        "zIndex": "1"
      }
    }
    tabIndex={0}>
    <div
      className="rangeslider__handle-label" />
  </div>
  <ul
    className="rangeslider__labels" />
</div>
`;

exports[`Rangeslider specs should render slider when props passed in 1`] = `
<div
  aria-orientation="horizontal"
  aria-valuemax={50}
  aria-valuemin={10}
  aria-valuenow={20}
  className="rangeslider rangeslider-horizontal"
  onMouseDown={[Function anonymous]}
  onMouseUp={[Function anonymous]}
  onTouchEnd={[Function anonymous]}
  onTouchStart={[Function anonymous]}>
  <div
    className="rangeslider__fill"
    style={
      Object {
        "left": "0px",
        "width": "0px"
      }
    } />
  <div
    className="rangeslider__handle"
    onKeyDown={[Function anonymous]}
    onKeyUp={[Function anonymous]}
    onMouseDown={[Function anonymous]}
    onMouseUp={[Function anonymous]}
    onTouchEnd={[Function anonymous]}
    onTouchMove={[Function anonymous]}
    role="button"
    style={
      Object {
        "left": "0px",
        "zIndex": "1"
      }
    }
    tabIndex={0}>
    <div
      className="rangeslider__handle-label" />
  </div>
  <ul
    className="rangeslider__labels" />
</div>
`;
